...
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/add_via_facebook_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/PrimaryButtonTheme"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
...
