...
                android:layout_height="5dp"
                android:background="@color/mc_primary_color"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/facebook_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:paddingTop="15dp">
...
