...
    <string name="photo">Photo</string>
    <string name="pin_confirm">Please confirm your pin code.</string>
    <string name="pin_did_not_match">Pin code did not match.</string>
    <string name="pin_invalid">Invalid pin code.</string>
    <string name="pin_required_continue">A pin is required to continue!</string>
    <string name="pin_setup_4_digit">To secure your app you need to choose a 4 digit pin code.</string>
    <string name="post">Post</string>
    <string name="previousButton">Back</string>
    <string name="previous_in_thread">Previous messages in this conversation</string>
    <string name="priority">Priority</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="processing">Processing…</string>
    <string name="processing_scan">Processing scan…</string>
...
