...
        </WebView>

        <View
            android:id="@+id/tos_split_1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/tos_age"
            android:background="@color/mc_gray_22" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/tos_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/tos_tap_agree"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/tos_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/PrimaryButtonTheme"
                android:gravity="center"
                android:minWidth="100dp"
                android:text="@string/agree"
...
