...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/registration_enter_email"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:gravity="center"
                android:hint="@string/registration_email"
...
                app:ico_icon="@string/faw_user_plus"
                app:ico_size="25dp"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_via_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/PrimaryButtonTheme"
            android:minHeight="50dp"
            android:gravity="center"
            android:text="@string/registration_sing_up_email"
...
