<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/mc_background_color"
              android:orientation="vertical">

    <ScrollView
        android:id="@+id/registration_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <com.mobicage.rogerthat.util.ui.SafeViewFlipper
            android:id="@+id/registration_viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureAllChildren="false">

            <include layout="@layout/registration_start"/>

            <include layout="@layout/registration_tos"/>

            <include layout="@layout/registration_notifications"/>
            
            <include layout="@layout/registration_oauth"/>

            <include layout="@layout/registration_create_account"/>

            <include layout="@layout/registration_activation"/>

            <include layout="@layout/registration_devices"/>


        </com.mobicage.rogerthat.util.ui.SafeViewFlipper>
    </ScrollView>
</LinearLayout>
