...
                android:gravity="center_horizontal"
                android:text="@string/registration_notifications_header"
                android:textColor="@color/mc_homescreen_text"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/notifications_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/notifications_text"
                android:layout_marginTop="20dp"
                android:theme="@style/PrimaryButtonTheme"
                android:gravity="center"
...
